Prevent flicker for permissions menu

--- a/trunk/framework/content/assets/css/content-permissions.css
+++ b/trunk/framework/content/assets/css/content-permissions.css
@@ -1,3 +1,6 @@
 .content-permissions {
 	margin: 0.5em 0;
 }
+.content-permissions .yui3-menu {
+	visibility: hidden; /* Prevent flicker on load, javascript will make visible when ready */
+}
